Added comment to index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <!-- Den primære resource for dette projektet er en tutorial fra Youtuberen Dev Ed - Link: https://www.youtube.com/watch?v=wLUJ9VNzZXo -->
-
+<!-- Link til Scroll Magic dokumentation: https://github.com/janpaepke/ScrollMagic/wiki/Getting-Started-:-How-to-use-ScrollMagic -->
   <!-- Første sektion med vidoen og animeret titel og underrubrik -->
   <div class="intro">
     <div class="gradient"></div>
